--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: /5.5
+    working_directory: /app
     docker:
       - image: docker:17.06.0-ce-git
     steps:
@@ -37,7 +37,7 @@ jobs:
       - run:
           name: Build kibana Docker image
           command: |
-            ls -lah
+            cd $(cat LATEST)
             docker version
             docker build --cache-from=app -t app .
       - run:
