--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,24 +6,12 @@ jobs:
       - image: docker:17.06.0-ce-git
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 17.06.0-ce
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache \
-              py2-pip=9.0.1-r1 curl=7.54.0-r0 jq
-            pip install \
-              docker-compose==1.14.0 \
-              awscli==1.11.112 \
-              httpie
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="17.05.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
+            apk add --no-cache jq
       - restore_cache:
           keys:
             - v1-{{ .Branch }}
@@ -35,7 +23,7 @@ jobs:
             set +o pipefail
             docker load -i /caches/app.tar | true
       - run:
-          name: Build kibana Docker image
+          name: Build application Docker image
           command: |
             cd $(cat LATEST)
             docker version
@@ -57,10 +45,15 @@ jobs:
           paths:
             - /caches/app.tar
       - run:
-          name: Run kibana test
+          name: Run kibana
           command: |
-            set -x
-            echo "make tests"
+            docker run -d --name kibana -p 5601:5601 app; sleep 10;
+            docker logs kibana
+      - run:
+          name: Run test
+          command: |
+            docker run --rm --network container:kibana blacktop/httpie GET http://localhost:5601
+
       # - deploy:
       #     name: Push application Docker image
       #     command: |
