--- a/6.5/config/kibana.yml
+++ b/6.5/config/kibana.yml
@@ -1,4 +1,4 @@
 server.name: kibana
 server.host: "0"
 elasticsearch.url: http://elasticsearch:9200
-xpack.monitoring.ui.container.elasticsearch.enabled: true
+# xpack.monitoring.ui.container.elasticsearch.enabled: true
