--- a/x-pack/config/kibana.yml
+++ b/x-pack/config/kibana.yml
@@ -1,3 +1,6 @@
+server.name: kibana
+server.host: "0"
+elasticsearch.url: http://elasticsearch:9200
 # Kibana is served by a back end server. This setting specifies the port to use.
 #server.port: 5601
 
